test/types/single/initFromSingle.chpl
var x$: single int = 0;
var y = x$;
writeln(y);
writeln(y.type:string);
